@@ -192,9 +192,8 @@ v8::Handle<v8::Value> setWebGLArrayHelper(const v8::Arguments& args)
         uint32_t offset = 0;
         if (args.Length() == 2)
             offset = toUInt32(args[1]);
-        ExceptionCode ec = 0;
-        impl->set(src, offset, ec);
-        V8Proxy::setDOMException(ec);
+        if (!impl->set(src, offset))
+            V8Proxy::setDOMException(INDEX_SIZE_ERR);
         return v8::Undefined();
     }
 
